# streamit-tae

./: Makefile  Makefile~  build.xml  last-mpsoc-config.xsd  model.lp  reg_test.py  test.tmp
NewTests/: simple.str
include/: mpsoc_com-lib.h  streamit-math-lib.h
nbproject/: build-impl.xml  project.properties  project.xml
tests/: AudiobeamFloat.str  AutoCorFloat.graph  AutoCorFloat.str  AutoCorInt.str  BPFProgramFloat.str  BatcherSort.graph  BatcherSort.str  BeamFormer1Float.str  BitonicSort.graph  BitonicSort.str  BitonicSortRecursive.graph  BitonicSortRecursive.str  BubbleSort.graph  BubbleSort.str  BubbleSort064.str  ComparisonCounting.str  DES.graph  DES.str  FFT2.str  FFT3.str  FFT4.str  FilterBankNewInt.str  FioExample.str  FioPassThrough.str  H264.str  InsertionSort.graph  InsertionSort.str  LPFProgram.str  Lattice.str  MatrixMultBlockFloat.graph  MatrixMultBlockFloat.str  MatrixMultBlockInt.str  (+17 more)
tools/: CMakeLists.txt  gen.cmd  gen_vs_proj.cmd  reference.sh  splitjoin.sh
tools/CompareTrace/: build.xml
tools/CompareTrace/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
tools/CompareTrace/nbproject/private/: private.properties
tools/CompareTrace/src/comparetrace/: CompareTrace.java  Filter.java  Work.java
tools/perf/: Makefile  perf  perf.c  perf.py
tools/plot/: all_2_8.def  annealing_ast_2_8.def  annealing_sim_2_8.def  cluster-noc.def  gm_ast_2_8.def  greedy_ast2_8.def  greedy_sim2_8.def  plot.py  plot_csv.py  plot_perf.py  sa-sim_cluster_1-4.def  sa-sim_cluster_1-8.def
tools/profile/: Makefile  profile  profile.c
(+496 files in other folders)
